<resources>
    <string name="app_name">Tienda</string>
    <string name="nombre">Nombre producto</string>
    <string name="codigo">Codigo de barras</string>
    <string name="Precio">precio provedor</string>
    <string name="preciouni">precio unitario</string>
    <string name="actividad">ALTA DE PRODUCTOS</string>
    <string name="actividad2">BAJA DE PRODUCTOS</string>
    <string name="actividad3">MODIFICAR Y BUSCAR PRODUCTOS</string>
    <string name="actividad4">MENU</string>
    <string name="user">email</string>
    <string name="con">password</string>
    <string name="btn">AGREGAR</string>
    <string name="btn1">ELIMINAR</string>
    <string name="btn2">MODIFICAR</string>
    <string name="btn3">BUSCAR</string>
    <string name="btn4">INGRESAR</string>




</resources>